--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,78 @@
+body {
+	background-color: #E0F0FF;
+	opacity: 0.99;
+}
+
+#header {
+	width: 1080px;
+	height: 50px;
+	margin: 0 auto;
+	margin-top: 10px;
+	background-color: #297ACC;
+	text-align: center;
+	border-radius: 5px;
+}
+
+h1 {
+	font-family: Comic Sans, sans-serif;
+}
+
+#options {
+	width: 800px;
+	height: 40px;
+	margin: 15px auto;
+}
+
 #container {
-	width: 900px;
-	height: 900px;
-	background-color: none;
-	margin: 20px auto;
-	padding: 1px;
-	padding-left: 0px;
-	padding-top: 2px;
+	width: 960px;
+	height: 960px;
+	margin: -10px auto;
+	padding: 0px;
+	overflow: auto;
+}
+
+button {
+	width: 120px;
+	height: 30px;
+	margin-left: 30px;
+	border-radius: 5px;
+	font-weight: 600;
+	font-family: sans-serif;
+}
+
+table {
+	width: 960px;
+	height: 960px;
+	margin: auto;
+	border-spacing: 0;
+	-webkit-border-horizontal-spacing: 0px;
+	-webkit-border-vertical-spacing: 0px;
+	padding-bottom: 0px;
+	line-height: 0px;
+}
+
+tr {
+	vertical-align: top;
 }
 
 .pixel {
+	margin: 0px 0px;
+	padding: 0;
 	border: 0;
-	margin: 0;
-	margin-left: 2px;
-	margin-top: -1px;
-	margin-bottom: -1px;
 	display: inline-block;
-	background-color: blue;
+	background-color: rgb(71,143,178);
 	width: 20px;
 	height: 20px;
+	z-index: 2;
+	position: relative;
 }
 
+
 .traced {
-	background-color: black;
+	background-color: #F5FAFF;
+}
+
+img {
+	width: 960;
+	height: 960;
 }
